--- a/web/index.html
+++ b/web/index.html
@@ -1,20 +1,68 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body><br>
-            Nombre de usuario: <input type="text" id="usuario" name="usuario" /><br>
-            Contraseña:  <input type="password" id="clave" name="clave"  /><br>
-            <input type="button" id="registrar" value="Ingresar con facebok" />
-            <a href="registro.html">Registrarse</a>
-            <div id="resultado"></div>
-         <h2>Bienvenido <span id="nick" class="nickname"></span></h2>
-            <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
-            <script src="https://cdn.auth0.com/js/lock/10.19/lock.min.js"></script>
-            <script src="js/ajax.js" type="text/javascript"></script>
-    </body>
+<head>
+	<title>INICIO</title>
+</head>
+<style type="text/css">
+
+*{
+	margin: 0px;
+	padding: 0px;
+}
+	 body{
+	 	width: 86%;
+	 	margin: auto;
+	 }
+	 header{
+	 	display: block;
+	 	width: 86%;
+	 	position: fixed;
+	 	z-index: 10;
+	 }
+
+	 .logo{
+	 	float: left;	
+	 }
+
+	nav{
+	 	float:right;
+	 }
+
+	 nav ul li{
+	 	float:right;
+	 	margin-right: 15px;
+	 	display: inline-block;
+	 }
+
+	 article{
+		margin-left: 70%;
+	 	display: block;
+	 }
+
+	 section{
+	 	padding-top: 40px;
+	 }
+</style>
+<body>
+	<header>
+	<a href="" class="logo">LOGO</a>
+	<nav>
+		<ul>
+			<li><a href="">NOSOTROS</a></li>
+			<li><a href="">INGRESAR</a></li>
+		</ul>
+	</nav>
+	</header>
+	<section>
+		
+		<h1>PAGINAS DE INCIO</h1>
+		<article class="jugador">
+			<a href="registrar_jugador.html">REGISTRAR JUGADOR</a>
+		</article>
+		<article class="empresario">
+			<a href="registrar_club.html">REGISTRAR EMPRESARIO</a>
+		</article>
+	</section>
+
+</body>
 </html>
