--- a/web/index.html
+++ b/web/index.html
@@ -1,68 +1,66 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>INICIO</title>
-</head>
-<style type="text/css">
-
-*{
-	margin: 0px;
-	padding: 0px;
-}
-	 body{
-	 	width: 86%;
-	 	margin: auto;
-	 }
-	 header{
-	 	display: block;
-	 	width: 86%;
-	 	position: fixed;
-	 	z-index: 10;
-	 }
-
-	 .logo{
-	 	float: left;	
-	 }
-
-	nav{
-	 	float:right;
-	 }
-
-	 nav ul li{
-	 	float:right;
-	 	margin-right: 15px;
-	 	display: inline-block;
-	 }
-
-	 article{
-		margin-left: 70%;
-	 	display: block;
-	 }
-
-	 section{
-	 	padding-top: 40px;
-	 }
-</style>
-<body>
-	<header>
-	<a href="" class="logo">LOGO</a>
-	<nav>
-		<ul>
-			<li><a href="">NOSOTROS</a></li>
-			<li><a href="">INGRESAR</a></li>
-		</ul>
-	</nav>
-	</header>
-	<section>
-		
-		<h1>PAGINAS DE INCIO</h1>
-		<article class="jugador">
-			<a href="registrar_jugador.html">REGISTRAR JUGADOR</a>
-		</article>
-		<article class="empresario">
-			<a href="registrar_club.html">REGISTRAR EMPRESARIO</a>
-		</article>
-	</section>
-
-</body>
+<html >
+    <head>
+        <meta charset="UTF-8">
+        <title>Login Form</title>
+        <link rel="stylesheet" href="css/estilo.css">
+    </head>
+    <body>
+        <div class="login-wrap">
+            <div class="login-html">
+                <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+                <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+                <div class="login-form">
+                    <div class="sign-in-htm">
+                        <div class="group">
+                            <label for="email" class="label">Usermail</label>
+                            <input id="email" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <label for="claveIngreso" class="label">Password</label>
+                            <input id="claveIngreso" type="password" class="input" data-type="password">
+                        </div>
+                        <div class="group">
+                            <input type="button" class="button" id="ingresar" value="ingresar">
+                        </div>
+                        <div class="hr"></div>
+                        <div class="foot-lnk">
+                            <a href="#forgot">Forgot Password?</a>
+                        </div>
+                    </div>
+                    <div class="sign-up-htm">
+                        <div class="group">
+                            <label for="nombre" class="label">Username</label>
+                            <input id="nombre" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <label for="claveRegistro" class="label">Password</label>
+                            <input id="claveRegistro" type="password" class="input" data-type="password">
+                        </div>
+                        <div class="group">
+                            <label for="pass" class="label">Email Address</label>
+                            <input id="pass" type="text" class="input">
+                        </div>
+                        <div class="group">
+                            <label for="rol" class="label">Seleccione un rol</label>
+                            <select id="rol" class="input">
+                                <option  selected disabled>Seleccione una opcion</option>
+                                <option value="administrador">administrador</option>
+                                <option value="cliente">cliente</option>
+                            </select>
+                        </div>
+                        <div class="group">
+                            <input type="button" class="button" id="registrar" value="registrar">
+                        </div>
+                        <div class="hr"></div>
+                        <div class="foot-lnk">
+                            <label for="tab-1">Already Member?</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="js/ajax.js" type="text/javascript"></script>
+        <script src="js/index.js" type="text/javascript"></script>
+    </body>
 </html>
